WIP implement SSR

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'hello_svelte' %>
     <%= javascript_pack_tag 'hello_svelte' %>
+    <link rel="stylesheet" media="screen" href="/styles/svelte.css" data-turbolinks-track="reload" />
   </head>
 
   <body>
